# kssp

./: .gitignore  CMakeLists.txt  LICENSE  conanfile.txt  kessler.pc.in  kssp.pc.in  readme.md
examples/: CMakeLists.txt  basic_pointer.cpp  calibrator.cpp  conanfile.txt  config.json  pointer.cpp  wasd_calibrator.cpp  wasd_controller.cpp
kessler/: consts.hpp  pointer_utils.hpp  stage.cpp  stage.hpp  stage.test.cpp  utils.hpp
kessler/enums/: messageid.h  messagetype.h  noteid.h
kessler/include/: stage.h
kessler/include/enums/: actionid.h  noteid.h
kessler/include/notifications/: aux_input_status.h  error_status.h  motor_calibrated.h  motor_position.h  motor_status.h  playback_status.h  unsupported_message.h
kessler/include/responses/: device_guid.h  device_info.h  led_status.h  motor_info.h
kessler/include/tools/: calibrator.h  consts.h  pointer_utils.h  utils.h
kessler/notifications/: error_status.cpp  motor_calibrated.cpp  motor_calibrated.h  motor_position.cpp  motor_position.h  motor_status.h  playback_status.h  unsupported_message.h
kessler/responses/: device_guid.cpp  device_guid.h  device_info.cpp  device_info.h  led_status.cpp  motor_info.h  network_info.cpp
kessler/src/: stage.cpp  stage.test.cpp
kessler/src/notifications/: error_status.cpp  motor_calibrated.cpp  motor_position.cpp  unsupported_message.cpp
kessler/src/responses/: device_guid.cpp  device_info.cpp  motor_info.cpp  network_info.cpp
kssp/include/: stage.h
kssp/include/enums/: messageid.h  messagetype.h
kssp/include/notifications/: aux_input_status.h  error_status.h  motor_calibrated.h  motor_position.h  motor_status.h  playback_status.h  unsupported_message.h
kssp/include/responses/: device_guid.h  device_info.h  led_status.h  motor_info.h  network_info.h
kssp/include/tools/: calibrator.h  pointer_utils.h
kssp/src/: stage.cpp
kssp/src/notifications/: aux_input_status.cpp  motor_status.cpp  playback_status.cpp
kssp/src/responses/: led_status.cpp
libkessler/: consts.h  stage.cpp  stage.h  stage.test.cpp  utils.hpp
libkessler/enums/: actionid.h  messageid.h  messagetype.h  noteid.h
libkessler/notifications/: aux_input_status.cpp  aux_input_status.h  error_status.cpp  error_status.h  motor_calibrated.cpp  motor_calibrated.h  motor_position.cpp  motor_position.h  motor_status.cpp  motor_status.h  playback_status.cpp  playback_status.h  unsupported_message.cpp  unsupported_message.h
libkessler/responses/: device_guid.cpp  device_guid.h  device_info.cpp  device_info.h  led_status.h  motor_info.cpp  motor_info.h  network_info.h
tests/: basic_pointer.cpp  calibrator.hpp  driver.cpp  live_tracker.cpp  pointer.cpp  pointer_utils.hpp  solvertest.cpp  wasd_calibrator.cpp  wasd_controller.cpp
